--- a/hosts.yml
+++ b/hosts.yml
@@ -1,8 +1,8 @@
 ---
 all:
   # Update your VM or bare-metal IP address
-  hosts: 13.235.214.200
+  hosts: 192.168.5.97
   vars:
     ansible_user: "ubuntu"
-    orc8r_domain: "galaxy.shubhamtatvamasi.com"
+    orc8r_domain: "galaxy.nitinrajput.com"
     deploy_on_aws: true
