--- a/hosts.yml
+++ b/hosts.yml
@@ -5,4 +5,4 @@ all:
   vars:
     ansible_user: "ubuntu"
     orc8r_domain: "galaxy.nitinrajput.com"
-    deploy_on_aws: true
+   # deploy_on_aws: true
